@@ -51,11 +51,13 @@ Bugfix
      Credit to OSS-Fuzz.
    * Support MBEDTLS_CHECK_PARAMS defined as assert as suggested in config.h.
      #2671
+   * Fix misuse of signed arithmetic in the HAVEGE module. #2598
 
 API Changes
    * Extend the MBEDTLS_SSL_EXPORT_KEYS to export the handshake randbytes,
      and the used tls-prf.
    * Add public API for tls-prf function, according to requested enum.
+   * The HAVEGE state type now uses uint32_t elements instead of int.
 
 Changes
    * Server's RSA certificate in certs.c was SHA-1 signed. In the default
